--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ title: Home
 I am a six-year Ph.D student at <a href="http://hcil.snu.ac.kr">Human-Computer Interaction Laboratory</a> of Seoul National University.
 I am studying Human-Computer Interaction (HCI) and Information Visualization.
 I am especially interested in visualization and interaction on large-scale data.
-My recent interest is progressive visual analyitcs: systems that enable interactive data exploration of big data by providing intermediate approximation in the middle of computation. I also love to contribute to open-source projects. You can reach me via e-mail(<a href="mailto:jmjo@hcil.snu.ac.kr">jmjo@hcil.snu.ac.kr</a>) or Github(<a href="https://www.github.com/e-">e-</a>)!
+My recent interest is progressive visual analyitcs: systems that enable interactive data exploration of big data by providing intermediate approximation in the middle of computation. I also love to contribute to open-source projects.
+You can reach me via e-mail (<a href="mailto:jmjo@hcil.snu.ac.kr">jmjo@hcil.snu.ac.kr</a>) or Github (<a href="https://www.github.com/e-">e-</a>)!
 </p>
 <img src="{{ site.data.meta.profile | relative_url }}" alt="Picture of Jaemin" width="240" height="240">
 </section>
