--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ title: Home
 <section id="intro">
 <p>
 I am a Ph.D candidate at <a href="http://hcil.snu.ac.kr">Human-Computer Interaction Laboratory</a> of Seoul National University.
-I am studying Human-Computer Interaction (HCI) and Information Visualization and especially interested in visualization and human interaction on large-scale data.
-My recent interest is progressive visual analyitcs: systems that enable interactive data exploration of big data by providing intermediate approximation in the middle of computation. 
+I am studying Human-Computer Interaction (HCI) and Information Visualization.
+My recent research interest is progressive visual analyitcs: systems that enable interactive data exploration of large-scasle data by providing intermediate approximation during long-running computation. 
 I also love to contribute to open-source projects.
 You can reach me via e-mail (<a href="mailto:jmjo@hcil.snu.ac.kr">jmjo@hcil.snu.ac.kr</a>) or Github (<a href="https://www.github.com/e-">e-</a>)!
 </p>
