--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@ title: Home
 
 <section id="intro">
 <p>
-I am a Ph.D candidate at <a href="http://hcil.snu.ac.kr">Human-Computer Interaction Laboratory</a> of Seoul National University.
-I am studying Human-Computer Interaction (HCI) and Information Visualization.
-My recent research interest is progressive visual analytics: systems that enable interactive data exploration of large-scale data by providing intermediate approximation during long-running computation. 
+I am a postdoctoral researcher at <a href="http://hcil.snu.ac.kr">Human-Computer Interaction Laboratory</a> of Seoul National University.
+I study Human-Computer Interaction (HCI) and Information Visualization and my recent research interest is progressive visual analytics: systems that enable interactive data exploration of large-scale data by providing intermediate approximation during long-running computation. 
 I also love to contribute to open-source projects.
 You can reach me via e-mail (<a href="mailto:jmjo@hcil.snu.ac.kr">jmjo@hcil.snu.ac.kr</a>) or Github (<a href="https://www.github.com/e-">e-</a>)!
 </p>
