--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@ title: Home
 
 <section id="intro">
 <p>
-I am a postdoctoral researcher at <a href="http://hcil.snu.ac.kr">Human-Computer Interaction Laboratory</a> of Seoul National University.
-I study Human-Computer Interaction (HCI) and Information Visualization and my recent research interest is progressive visual analytics: systems that enable interactive data exploration of large-scale data by providing intermediate approximation during long-running computation. 
+I am an assistant professor at <a href="https://cs.skku.edu/">College of Computing</a>, <a href="https://www.skku.edu/">Sungkyunkwan University</a>.
+I research Human-Computer Interaction (HCI) and Information Visualization and my recent research interest is progressive visual analytics: systems that enable interactive data exploration of large-scale data by providing intermediate approximation during long-running computation. 
 I also love to contribute to open-source projects.
-You can reach me via e-mail (<a href="mailto:jmjo@hcil.snu.ac.kr">jmjo@hcil.snu.ac.kr</a>) or Github (<a href="https://www.github.com/e-">e-</a>)!
+You can reach me via e-mail (<a href="mailto:jmjo@skku.edu">jmjo@skku.edu</a>) or Github (<a href="https://www.github.com/e-">e-</a>)!
 </p>
 <img src="{{ site.data.meta.profile | relative_url }}" alt="Picture of Jaemin" width="240" height="240">
 </section>
