--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ title: Home
   <p>
     I am an assistant professor at
     <a href="https://cs.skku.edu/">College of Computing</a>,
-    <a href="https://www.skku.edu/">Sungkyunkwan University</a> and directing
-    <a href="https://vis.skku.edu">Visualization Laboratory</a>. I research
+    <a href="https://www.skku.edu/">Sungkyunkwan University</a> and the director
+    of <a href="http://vis.skku.edu">Visualization Laboratory</a>. I research
     Human-Computer Interaction (HCI) and Information Visualization. I also love
     to contribute to open-source projects. You can reach me via e-mail (<a
       href="mailto:jmjo@skku.edu"
