--- a/index.html
+++ b/index.html
@@ -2,27 +2,20 @@
 layout: home
 title: Home
 ---
-
-<h1 class="page-heading"><span id="hello">Hello,</span> I'm Jaemin Jo</h1>
-
+<h1 class="page-heading" style="margin-bottom:2rem;">This page is no longer maintained. Please visit <a class="link"
+    href="https://idclab.skku.edu">our new website</a>.
+</h1>
 <section id="intro">
   <p>
-    I am an assistant professor at
+    Hello, I'm Jaemin Jo. I am an assistant professor at
     <a href="https://cs.skku.edu/">College of Computing</a>,
     <a href="https://www.skku.edu/">Sungkyunkwan University</a> and the director
-    of <a href="http://vis.skku.edu">Visualization Laboratory</a>. I research
-    Human-Computer Interaction (HCI) and Information Visualization. I also love
-    to contribute to open-source projects. You can reach me via e-mail (<a
-      href="mailto:jmjo@skku.edu"
-      >jmjo@skku.edu</a
-    >) or Github (<a href="https://www.github.com/e-">e-</a>)!
+    of <a href="https://idclab.skku.edu">Interactive Data Computing Laboratory</a>. I research
+    Human-Computer Interaction (HCI) and Information Visualization.
+    You can also reach me via e-mail (<a href="mailto:jmjo@skku.edu">jmjo@skku.edu</a>) or Github (<a
+      href="https://www.github.com/e-">e-</a>)!
   </p>
-  <img
-    src="{{ site.data.meta.profile | relative_url }}"
-    alt="Picture of Jaemin"
-    width="240"
-    height="240"
-  />
+  <img src="{{ site.data.meta.profile | relative_url }}" alt="Picture of Jaemin" width="240" height="240" />
 </section>
 
 <h2>Selected Projects</h2>
