--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 layout: home
 title: Home
 ---
-<h1 class="page-heading" style="margin-bottom:2rem;">This page is no longer maintained. Please visit <a class="link"
+<!-- <h1 class="page-heading" style="margin-bottom:2rem;">This page is no longer maintained. Please visit <a class="link"
     href="https://idclab.skku.edu">our new website</a>.
-</h1>
+</h1> -->
 <section id="intro">
   <p>
     Hello, I'm Jaemin Jo. I am an assistant professor at
