--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ title: Home
 </h1> -->
 <section id="intro">
   <p>
-    Hello, I'm Jaemin Jo. I am an assistant professor at
+    <span id="hello">Hello,</span> I'm Jaemin Jo. I am an assistant professor at
     <a href="https://cs.skku.edu/">College of Computing</a>,
     <a href="https://www.skku.edu/">Sungkyunkwan University</a> and the director
     of <a href="https://idclab.skku.edu">Interactive Data Computing Laboratory</a>. I research
-    Human-Computer Interaction (HCI) and Information Visualization.
+    Human-Computer(AI) Interaction (HCI) and Information Visualization.
     You can also reach me via e-mail (<a href="mailto:jmjo@skku.edu">jmjo@skku.edu</a>) or Github (<a
       href="https://www.github.com/e-">e-</a>)!
   </p>
@@ -34,7 +34,7 @@ title: Home
 </section>
 
 <script>
-  if (Math.random() < 0.2) {
+  if (Math.random() < 0.5) {
     let hello = document.querySelector("#hello");
     hello.innerHTML = "안녕?";
     hello.style.fontFamily = "'Noto Sans KR', sans-serif";
