--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 layout: home
 title: Home
 ---
-<!-- <h1 class="page-heading" style="margin-bottom:2rem;">This page is no longer maintained. Please visit <a class="link"
-    href="https://idclab.skku.edu">our new website</a>.
-</h1> -->
+<h1 class="page-heading" style="margin-bottom:2rem;">This page is no longer maintained. Please visit <a class="link"
+    href="https://idclab.skku.edu">my new website</a>.
+</h1>
 <section id="intro">
   <p>
-    <span id="hello">Hello,</span> I'm Jaemin Jo. I am an assistant professor at
+    <span id="hello">Hello,</span> I'm Jaemin Jo. I am an associate professor at
     <a href="https://cs.skku.edu/">College of Computing</a>,
     <a href="https://www.skku.edu/">Sungkyunkwan University</a> and the director
     of <a href="https://idclab.skku.edu">Interactive Data Computing Laboratory</a>. I research
